# notes

./: .gitignore  LICENSE  README.md  uminho.sh
A01/: lex.yy.c
A02/: ap-1  lex.yy.c  pa-1  pa-1.l  pa-2  pa-2.l
A03/: Glossario_PT_PL_1.tmx  lex.yy.c  out.txt
A05/: calculadora.fl
A06/: calculadora.fl
A07/: compiler.fl  compiler.y
A08/: compiler.fl  dup.vm  makefile
A09/: ex2.vm  ex3.lpf  ex4.lpf  ex5.lpf
AA/: README.md
AP/: README.md
Apoio/: bottomup  topdown  vms.tar
ArqC/: README.md
BD/: README.md
CG/: README.md
CP/: README.md
Chalanges/: multMat.hs
DSS/: README.md
EE/: ELAST.g3e  PIS.g3e  TPRODC.g3e
EES/: shortest_path.xlsx
F01/: 1.c  3-1.c  3-2.c  5-2.c  5-4.c  5.c
F02/: 1-a.c  2-1.c  2.c  ficha02.pl  run.sh  vtune_results.amplxe
F03/: 1.c  ex2-1.ods
F04/: ficha04.pl
Ficha01/: exercicio2.hs  exercicio3.hs  exercicio5.hs  exercicio7.hs
Ficha02/: Exercicio2.hs
Ficha04/: Ficha4.hs
Ficha05/: Ficha5.hs
Ficha06/: Ficha6.hs
Ficha08/: Ficha8.hs
Ficha1/: Ficha1.hs  ficha2.R  vetor_x.txt
Ficha2/: ficha2.R
Ficha4/: Ficha4.R
Guiao0/: Makefile  person.c
Guiao2/: 5.c
Guiao3/: 3.c  5.c
MNOL/: README.md  teste2.md
P10/: pl10-1.c  pl10-1.sh  pl10-2a.sh  pl10-2b.sh
P11/: gemm.c  gemm.h  my_papi.c
P2/: Makefile  my_papi.c  my_papi.h
P3/: gemm.sh  main.c
P8/: Makefile  gemm.sh  main.c
P9/: Makefile-novec  my_papi.c  novec-kernel.s  vec-kernel.c  vec-kernel.h  vec-kernel.s
PCP/: README.md
PF/: README.md
PI/: 50Q.c  50Q2.c  README.md
PL/: README.md
Quiz/: aula1.l
TP04/src/: CMakeLists.txt  main.cpp
(+543 files in other folders)
